该项目是基于 3DMGAME 的游戏门户 app，目前已在豌豆荚上线 主要分为四大模块，文章、视频、论坛、游戏；

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,9 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activities.VideoDetailActivity"
-            android:theme="@style/AppTheme" ></activity>
+        <activity
+            android:name=".activities.VideoDetailActivity"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
