--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.stx.xhb.dmgameapp"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 8
-        versionName "2.4"
+        versionCode 10
+        versionName "2.5"
         multiDexEnabled true
         ndk {
             //选择要添加的对应cpu类型的.so库。
@@ -22,8 +22,17 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    productFlavors {
+        tencent {
+            manifestPlaceholders = [CHANNEL: "Tencent"]
+        }
+        wandoujia {
+            manifestPlaceholders = [CHANNEL: "Wandoujia"]
         }
     }
 
@@ -47,12 +56,11 @@ dependencies {
     compile 'com.github.shell-software:fab:1.1.2'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.android.support:cardview-v7:23.2.1'
-    compile 'com.wang.avi:library:1.0.1'
     compile 'com.classic.common:multiple-status-view:1.2'
     compile 'in.srain.cube:ultra-ptr:1.0.11'
     compile 'cn.finalteam.loadingviewfinal:loading-more-view:1.0.1'
     compile 'cn.finalteam.loadingviewfinal:ultra-pull-to-refresh:1.0.1'
     compile 'cn.jiguang:jpush:2.1.9'
-    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.umeng.analytics:analytics:latest.integration'
 }
