--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.stx.xhb.dmgameapp"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 10
         versionName "2.5"
         multiDexEnabled true
@@ -45,21 +45,26 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.+'
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.viewpagerindicator:library:2.4.1@aar'
-    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'org.xutils:xutils:3.3.12'
+    compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
     compile 'com.github.shell-software:fab:1.1.2'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.classic.common:multiple-status-view:1.2'
+    //下拉刷新
     compile 'in.srain.cube:ultra-ptr:1.0.11'
     compile 'cn.finalteam.loadingviewfinal:loading-more-view:1.0.1'
     compile 'cn.finalteam.loadingviewfinal:ultra-pull-to-refresh:1.0.1'
+    //glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    //xbanner
+    compile 'com.xhb:xbanner:1.3.0'
+    //极光推送
     compile 'cn.jiguang:jpush:2.1.9'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.umeng.analytics:analytics:latest.integration'
