--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,11 +50,14 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.google.code.gson:gson:2.7'
+    //butterknife
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
     compile 'com.github.shell-software:fab:1.1.2'
+    //圆角图片
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    //多状态视图
     compile 'com.classic.common:multiple-status-view:1.2'
     //下拉刷新
     compile 'in.srain.cube:ultra-ptr:1.0.11'
