--- a/core/build.gradle
+++ b/core/build.gradle
@@ -28,11 +28,12 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
     //butterknife
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
     //圆角图片
-    compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
     //多状态视图
     compile 'com.classic.common:multiple-status-view:1.2'
     //glide
